--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,20 @@
 .container {
   width: 100%;
+  height: 100vh;
   max-width: 1440px;
   padding: 0 1rem;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
+.main {  
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .gradientText0 {
   background: -webkit-linear-gradient(#bfa3da, #84309c, #c735b0);
   -webkit-background-clip: text;
@@ -85,6 +95,9 @@
   max-width: 440px;
   overflow: none;
   border: none;
+  margin: 1rem;
+  padding: 5px;
+  border: solid 3px transparent;
 }
 
 .cardText {
@@ -105,6 +118,7 @@
 .card:active {
   background-color: #272c34;
   opacity: 80%;
+  border: solid 3px #84309c;  
 }
 
 .card h2 {
